--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <div class="portfolio mb-3" id='portfolio'>
         <h3 class="section-title text-center mt-5">Portfolio</h3>
-        <div class="container">
+        <div class="container mb-3">
         <div class="row">
             <div class="col-sm-6">
                 <div class="card" style="width: 18rem;">
@@ -169,13 +169,32 @@
      <!-- Contact -->
       
     <section class="slanted-edge-four" id='contact'>
-        <h2 class="section-title text-center">Contact</h2>
-        <div class="contact-form">
-            <div class="title">
-                <h1>Kyle M Thompson</h1>
-                <h2>Front End Web Developer</h2>
-                <button>Contact Me</button>
+        <h2 class="section-title text-center mb-3">Contact</h2>
+        <div class="container contact">
+        <form class="">
+            <div class="row g-3">
+              <div class="col-sm g-3">
+                <input type="text" class="form-control" placeholder="First name">
+              </div>
+              <div class="col-sm g-3">
+                <input type="text" class="form-control" placeholder="Email">
+              </div>
             </div>
+            <div class="row">
+                <div class="col g-3">
+                <input type="text" class="form-control" placeholder="Phone">
+                </div>
+            </div>
+            <div class="row " >
+                <div class="col g-3">
+                    <textarea class="form-control"></textarea>
+                </div>
+            </div>
+            <div class="row mx-auto d-block">
+                <button type="submit" class="btn btn-primary text-center ">Submit</button>
+            </div>
+          </form>
+        </div>
         </div>
     </section>
 </main>
